--- a/index.html
+++ b/index.html
@@ -11,22 +11,22 @@
 <body>
     <div id="score-container" class="score-container">
         <span class="title-container"><p class="title">FABULOSO FRED</p></span>
-        <span class="number-container"><p id="score" class="score">0</p></span>
+        <span class="number-container"><p id="score" class="score"></p></span>
         <button id="startButton" class="btn-start" onclick="startGame()">PLAY</button>
     </div>
     <div id="gamepad" class="gamepad">
-        <div id="marron" class="color marron f1" data-color="marron"></div>
-        <div id="rosa" class="color rosa f1" data-color="rosa"></div>
-        <div id="rojo" class="color rojo f1" data-color="rojo"></div>
-        <div id="mostaza" class="color mostaza f1" data-color="mostaza"></div>
-        <div id="azul" class="color azul f2" data-color="azul"></div>
-        <div id="amarillo" class="color amarillo f2" data-color="amarillo"></div>
-        <div id="cyan" class="color cyan f2" data-color="cyan"></div>
-        <div id="limon" class="color limon f2" data-color="limon"></div>
-        <div id="naranja" class="color naranja f3" data-color="naranja"></div>
-        <div id="guinda" class="color guinda f2" data-color="guinda"></div>
-        <div id="verde" class="color verde f2" data-color="verde"></div>
-        <div id="violeta" class="color violeta f2" data-color="violeta"></div>
+        <div id="marron" class="color marron f1" data-color="marron" data-number="0"></div>
+        <div id="rosa" class="color rosa f1" data-color="rosa" data-number="1"></div>
+        <div id="rojo" class="color rojo f1" data-color="rojo" data-number="2"></div>
+        <div id="mostaza" class="color mostaza f1" data-color="mostaza" data-number="3"></div>
+        <div id="azul" class="color azul f2" data-color="azul" data-number="4"></div>
+        <div id="amarillo" class="color amarillo f2" data-color="amarillo" data-number="5"></div>
+        <div id="cyan" class="color cyan f2" data-color="cyan" data-number="6"></div>
+        <div id="limon" class="color limon f2" data-color="limon" data-number="7"></div>
+        <div id="naranja" class="color naranja f3" data-color="naranja" data-number="8"></div>
+        <div id="guinda" class="color guinda f2" data-color="guinda" data-number="9"></div>
+        <div id="verde" class="color verde f2" data-color="verde" data-number="10"></div>
+        <div id="violeta" class="color violeta f2" data-color="violeta" data-number="11"></div>
     </div>
 </body>
 </html>
